feat: modified register and login site

--- a/src/users/templates/users/login.html
+++ b/src/users/templates/users/login.html
@@ -1,16 +1,28 @@
-{% extends 'shop/sidebar.html' %}
+{% extends 'shop/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block content_main %}
+{% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form | crispy }}
+<div class="d-flex justify-content-center" style="background-color: #f5f5f5;">
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Log In!</legend>
+                {{ form | crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Login</button>
+            </div>
+        </form>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Have an account? <a class="ml-2" href="{% url 'register' %}}">Sign Up</a>
+            </small>
+        </div>
+    </div>
+</div>
 
-    <button type="submit">Register</button>
-</form>
-
-<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 
 
 {% endblock %}
