--- a/src/users/templates/users/register.html
+++ b/src/users/templates/users/register.html
@@ -1,14 +1,21 @@
-{% extends 'shop/sidebar.html' %}
+{% extends 'shop/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block content_main %}
-<form method="post">
-    {% csrf_token %}
-    {{ form | crispy }}
-    <button type="submit">Login</button>
-</form>
+{% block content %}
 
-<p class="text-center">Have an account? <a class="ml-2" href="{% url 'register' %}}">Sign Up</a>
+<div class="d-flex justify-content-center" style="background-color: #f5f5f5;">
+    <div class="bg-white p-4">
+        <h2 class="text-center mb-4">Register</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form1 | crispy }}
+        <h2 class="text-center mb-4">Default shipping address </h2>
+            {{ form2 | crispy }}
+            <button type="submit">Register</button>
+        </form>
+    </div>
+</div>
+
+<p class="text-center">Have an account? <a class="ml-2" href="{% url 'login' %}}">Sign Up</a></p>
 
 {% endblock %}
-
