--- a/src/shop/templates/shop/index.html
+++ b/src/shop/templates/shop/index.html
@@ -4,259 +4,65 @@
 
 <div class="span9">
     <div class="well well-small">
-    <h4>Featured Products <small class="pull-right">200+ featured products</small></h4>
-    <div class="row-fluid">
-    <div id="featured" class="carousel slide">
-    <div class="carousel-inner">
-      <div class="item">
-      <ul class="thumbnails">
-        <li class="span3">
-          <div class="thumbnail">
-          <i class="tag"></i>
-            <a href="product_details.html"><img src="{% static 'images/products/b1.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
+        <h4>Featured Products <small class="pull-right">200+ featured products</small></h4>
+        <div class="row-fluid">
+            <div id="featured" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="item">
+                        <ul class="thumbnails">
+                            {% for product in featured_products %}
+                                <li class="span3">
+                                    <div class="thumbnail">
+                                        <i class="tag"></i>
+                                        <a href="{% url 'product_details' product.id %}">
+                                            <img src="{{ product.images.first.image.url }}" alt="{{ product.name }}">
+                                        </a>
+                                        <div class="caption">
+                                            <h5>{{ product.name }}</h5>
+                                            <h4>
+                                                <a class="btn" href="{% url 'product_details' product.id %}">
+                                                    VIEW
+                                                </a>
+                                                <span class="pull-right">${{ product.unit_price }}</span>
+                                            </h4>
+                                        </div>
+                                    </div>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#featured" data-slide="prev">‹</a>
+                <a class="right carousel-control" href="#featured" data-slide="next">›</a>
             </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-          <i class="tag"></i>
-            <a href="product_details.html"><img src="{% static 'images/products/b2.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-          <i class="tag"></i>
-            <a href="product_details.html"><img src="{% static 'images/products/b3.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-          <i class="tag"></i>
-            <a href="product_details.html"><img src="{% static 'images/products/b4.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-      </ul>
-      </div>
-       <div class="item active">
-      <ul class="thumbnails">
-        <li class="span3">
-          <div class="thumbnail">
-          <i class="tag"></i>
-            <a href="product_details.html"><img src="{% static 'images/products/5.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-          <i class="tag"></i>
-            <a href="product_details.html"><img src="{% static 'images/products/6.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/7.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/8.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-      </ul>
-      </div>
-       <div class="item">
-      <ul class="thumbnails">
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/9.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/10.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/11.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/1.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-      </ul>
-      </div>
-       <div class="item">
-      <ul class="thumbnails">
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/2.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/3.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/4.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/5.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-               <h4><a class="btn" href="product_details.html">VIEW</a> <span class="pull-right">$222.00</span></h4>
-            </div>
-          </div>
-        </li>
-      </ul>
-      </div>
-      </div>
-      <a class="left carousel-control" href="#featured" data-slide="prev">‹</a>
-      <a class="right carousel-control" href="#featured" data-slide="next">›</a>
-      </div>
-      </div>
+        </div>
+    </div>
+    <h4>Latest Products</h4>
+    <ul class="thumbnails">
+        {% for product in latest_products %}
+            <li class="span3">
+                <div class="thumbnail">
+                    <a href="{% url 'product_details' product.id %}">
+                        <img src="{{ product.images.first.image.url }}" alt="{{ product.name }}">
+                    </a>
+                    <div class="caption">
+                        <h5>{{ product.name }}</h5>
+                        <p>{{ product.description }}</p>
+                        <h4 style="text-align:center">
+                            <a class="btn" href="{% url 'product_details' product.id %}">
+                                VIEW
+                            </a>
+                            <a class="btn" href="#">
+                                Add to Cart
+                            </a>
+                            <a class="btn btn-primary" href="#">
+                                ${{ product.unit_price }}
+                            </a>
+                        </h4>
+                    </div>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
-<h4>Latest Products </h4>
-      <ul class="thumbnails">
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/6.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <p>
-                Lorem Ipsum is simply dummy text.
-              </p>
-
-              <h4 style="text-align:center"><a class="btn" href="product_details.html"> <i class="icon-zoom-in"></i></a> <a class="btn" href="#">Add to <i class="icon-shopping-cart"></i></a> <a class="btn btn-primary" href="#">$222.00</a></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/7.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <p>
-                Lorem Ipsum is simply dummy text.
-              </p>
-             <h4 style="text-align:center"><a class="btn" href="product_details.html"> <i class="icon-zoom-in"></i></a> <a class="btn" href="#">Add to <i class="icon-shopping-cart"></i></a> <a class="btn btn-primary" href="#">$222.00</a></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/8.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <p>
-                Lorem Ipsum is simply dummy text.
-              </p>
-               <h4 style="text-align:center"><a class="btn" href="product_details.html"> <i class="icon-zoom-in"></i></a> <a class="btn" href="#">Add to <i class="icon-shopping-cart"></i></a> <a class="btn btn-primary" href="#">$222.00</a></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/9.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <p>
-                Lorem Ipsum is simply dummy text.
-              </p>
-              <h4 style="text-align:center"><a class="btn" href="product_details.html"> <i class="icon-zoom-in"></i></a> <a class="btn" href="#">Add to <i class="icon-shopping-cart"></i></a> <a class="btn btn-primary" href="#">$222.00</a></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/10.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <p>
-                Lorem Ipsum is simply dummy text.
-              </p>
-              <h4 style="text-align:center"><a class="btn" href="product_details.html"> <i class="icon-zoom-in"></i></a> <a class="btn" href="#">Add to <i class="icon-shopping-cart"></i></a> <a class="btn btn-primary" href="#">$222.00</a></h4>
-            </div>
-          </div>
-        </li>
-        <li class="span3">
-          <div class="thumbnail">
-            <a href="product_details.html"><img src="{% static 'images/products/11.jpg' %}" alt=""></a>
-            <div class="caption">
-              <h5>Product name</h5>
-              <p>
-                Lorem Ipsum is simply dummy text.
-              </p>
-               <h4 style="text-align:center"><a class="btn" href="product_details.html"> <i class="icon-zoom-in"></i></a> <a class="btn" href="#">Add to <i class="icon-shopping-cart"></i></a> <a class="btn btn-primary" href="#">$222.00</a></h4>
-            </div>
-          </div>
-        </li>
-      </ul>
-
-</div>
-
 {% endblock %}
