--- a/src/shop/templates/shop/base.html
+++ b/src/shop/templates/shop/base.html
@@ -27,6 +27,7 @@
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
             <ul class="dropdown-menu">
@@ -37,15 +38,45 @@
                 {% endfor %}
             </ul>
           </li>
+
         </ul>
-        <form role="search">
+
+        <form role="search" class="mx-auto">
           <input class="form-control" type="search" placeholder="Search" aria-label="Search">
         </form>
+
+        <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+                {% endif %}
+            </ul>
+
       </div>
     </div>
   </nav>
   <!-- navibar end -->
+
+  <!-- message start -->
+  {% if messages %}
+      {%  for message in messages %}
+          <div class="alert alert-{{  message.tags }}">
+            {{ message }}
+          </div>
+      {% endfor %}
+  {% endif %}
+  <!-- message end -->
+
   <div id="content">{% block content %} {% endblock %}</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>  </body>
 </body>
