--- a/src/shop/templates/shop/product-details.html
+++ b/src/shop/templates/shop/product-details.html
@@ -1,5 +1,6 @@
 {% extends "shop/base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block title %}
 {{ product_details.name }}
 {% endblock %}
