--- a/src/users/templates/users/profile.html
+++ b/src/users/templates/users/profile.html
@@ -1,19 +1,17 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %} register {% endblock %}
+{% block title %} Profile {% endblock %}
 {% block content %}
 <div class="d-flex justify-content-center" style="background-color: #f5f5f5;">
     <div class="bg-white p-4">
-        <h2 class="text-center mb-4">Register</h2>
+        <h2 class="text-center mb-4">Profile info</h2>
         <form method="post">
             {% csrf_token %}
-            {{ form | crispy }}
-            <button type="submit">Register</button>
+            {{ ProfileUpdate | crispy }}
+            <button type="submit">Update</button>
         </form>
     </div>
 </div>
-
-<p class="text-center">Have an account? <a class="ml-2" href="{% url 'login' %}}">Sign Up</a></p>
 
 {% endblock %}
