after removing db, creating populate_db, adding new pictures, add new app cart

--- a/src/shop/templates/shop/home.html
+++ b/src/shop/templates/shop/home.html
@@ -13,7 +13,13 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img class="img-fluid" alt="Responsive image" src="{{ product.first_image.url }}">
+
+            {% if product.first_image %}
+                <img class="img-fluid" alt="Responsive image" src="{{ product.first_image.url }}">
+            {% else %}
+                <img class="img-fluid" alt="Default image" src="media/no_image_available.jpg">
+            {% endif %}
+
             <div class="card-body">
               <p class="card-text">
                 <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.name }}</a>
