--- a/src/shop/templates/shop/base.html
+++ b/src/shop/templates/shop/base.html
@@ -11,7 +11,7 @@
   <!-- navibar start -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
     <div class="container-fluid">
-      <a class="navbar-brand" href={% url 'shop:all_product_list' %}>WszebiShop</a>
+      <a class="navbar-brand" href={% url 'shop:all-product-list' %}>WszebiShop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarsExample05">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href={% url 'shop:all_product_list' %}>Home</a>
+            <a class="nav-link active" aria-current="page" href={% url 'shop:all-product-list' %}>Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -47,7 +47,7 @@
 
         <ul class="navbar-nav ml-auto">
 
-            <a type="button" role="button" href="{% url 'cart:cart_details' %}" class="btn btn-primary" >
+            <a type="button" role="button" href="{% url 'carts:cart-details' %}" class="btn btn-primary" >
                 {{ cart_total_quantity }}
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket2" viewBox="0 0 16 16">
               <path d="M4 10a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 1 1 2 0v2a1 1 0 0 1-2 0z"></path>
