--- a/src/shop/templates/shop/home.html
+++ b/src/shop/templates/shop/home.html
@@ -26,10 +26,20 @@
               <p class="card-text">
                 <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.name }}</a>
               </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">9min read</small>
-              </div>
             </div>
+          <div class="d-flex">
+            <form action="{% url 'carts:add-to-cart' product.id %}" method="POST" class="d-inline">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-outline-secondary btn-sm">
+                Add to Cart</button>
+            </form>
+              <form action="" method="POST" class="d-inline">
+                  {% csrf_token %}
+                <button type="submit" class="btn btn-outline-secondary btn-sm">
+                    Order</button>
+              </form>
+          </div>
+
           </div>
         </div>
 
