--- a/src/shop/templates/shop/product-details.html
+++ b/src/shop/templates/shop/product-details.html
@@ -52,7 +52,7 @@
                                 </select>
 
                             </div>
-                            <form action="{% url 'cart:add_to_cart' product_details.id %}" method="POST" class="d-inline">
+                            <form action="{% url 'carts:add-to-cart' product_details.id %}" method="POST" class="d-inline">
                                 {% csrf_token %}
                                 <div class="col-6 text-end">
                                 <button type="submit" class="btn btn-outline-secondary btn-sm">
