--- a/src/carts/templates/carts/cart_details.html
+++ b/src/carts/templates/carts/cart_details.html
@@ -14,7 +14,7 @@
           {% if item.product.first_image %}
             <img class="img-fluid mx-auto d-block" width="120px" alt="Responsive image" src="{{ item.product.first_image.url }}">
           {% else %}
-            <img class="img-fluid mx-auto d-block" width="120px" alt="Default image" src="media/no_image_available.jpg">
+            <img class="img-fluid mx-auto d-block" width="120px" alt="Default image" src="../media/no_image_available.jpg">
           {% endif %}
         </div>
         <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
@@ -27,7 +27,26 @@
             <div class="row p-3">
               <div class="col-6 text-start"><span class="h6 fw-bold">Price per unit: {{ item.product.unit_price }} zł</span></div>
             </div>
+
+              <div class="col">
+              <form method="POST">
+                {% csrf_token %}
+                {{ update_quantity_form.as_p }}
+                <button type="submit" class="btn btn-outline-secondary btn-sm update-button">Update Quantity</button>
+              </form>
+            </div>
+
               <p><span class="h6 fw-bold">{{ item.quantity }} {{ item.product.unit }} X {{ item.product.unit_price }}</span></p>
+
+
+
+              <div class="col">
+                <form action="{% url 'carts:remove-item' product_id=item.product.id %}" method="POST" class="d-inline">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-outline-danger btn-sm delete-button">Remove item</button>
+                </form>
+              </div>
+
               <div class="col">
               <form action="{% url 'carts:add-to-cart' product_id=item.product.id %}" method="POST" class="d-inline">
                   {% csrf_token %}
@@ -70,11 +89,9 @@
       Remove all
     </button>
   </form>
-    <form action="" method="POST" class="d-inline">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-outline-secondary btn-sm">
-            Order</button>
-    </form>
+    <a class="btn btn-outline-secondary btn-sm" href="{% url 'orders:order' %}">
+        Go to order
+    </a>
 </div>
     </div>
 
