[feature] implemented payment using stripe, modified order app

--- a/src/carts/templates/carts/cart_details.html
+++ b/src/carts/templates/carts/cart_details.html
@@ -89,7 +89,7 @@
       Remove all
     </button>
   </form>
-    <a class="btn btn-outline-secondary btn-sm" href="{% url 'orders:order' %}">
+    <a class="btn btn-outline-secondary btn-sm" href="{% url 'orders:order-confirmation' %}">
         Go to order
     </a>
 </div>
