--- a/src/orders/templates/orders/orders_confirmation.html
+++ b/src/orders/templates/orders/orders_confirmation.html
@@ -65,7 +65,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center mb-3">
-                    <form action="{% url 'orders:order' %}" method="GET" class="d-inline">
+                    <form action="{% url 'orders:order-confirmation' %}" method="GET" class="d-inline">
                         {% csrf_token %}
                         <div>
                             <label for="shipping_address">Select shipping address:</label>
@@ -122,8 +122,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col text-center mb-3">
-                    {#                <form action="{% url 'payments:payment-process' %}" method="POST">#}
-                    <form action="" method="POST">
+                    <form action="{% url 'payments:payment-process' %}" method="POST">
                         {% csrf_token %}
                         <input type="hidden"
                                name="total_price_with_shipping"
