[refactor] *moved paths related to users from core/urls to users and updated templates
[feature]
*added new views for product: create, list, update, delete
*added new views for ordr list, filtering

[fix] fixed issue account without addresses

--- a/src/orders/templates/orders/orders_confirmation.html
+++ b/src/orders/templates/orders/orders_confirmation.html
@@ -133,7 +133,9 @@
                         <input type="hidden"
                                name="selected_shipping_type"
                                value="{{ selected_shipping_type.id }}">
-                        <button type="submit" class="btn btn-primary btn-lg">Proceed to Payment</button>
+                        <button type="submit" class="btn btn-primary btn-lg"
+                                {% if not selected_shipping_address.id %}disabled{% endif %}>
+                            Proceed to Payment</button>
                     </form>
                 </div>
             </div>
