--- a/src/users/templates/users/login.html
+++ b/src/users/templates/users/login.html
@@ -17,7 +17,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Have an account? <a class="ml-2" href="{% url 'register' %}}">Sign Up</a>
+                Have an account? <a class="ml-2" href="{% url 'users:register' %}}">Sign Up</a>
             </small>
         </div>
     </div>
