--- a/src/users/templates/users/logout.html
+++ b/src/users/templates/users/logout.html
@@ -5,7 +5,7 @@
     <h2>You have been log out</h2>
     <div class="border-top pt-3">
         <small class="text-muted">
-            <a href="{% url 'login' %}">Log In Again</a>
+            <a href="{% url 'users:login' %}">Log In Again</a>
         </small>
     </div>
 </div>
