--- a/src/users/templates/users/login.html
+++ b/src/users/templates/users/login.html
@@ -19,6 +19,9 @@
             <small class="text-muted">
                 Have an account? <a class="ml-2" href="{% url 'users:register' %}}">Sign Up</a>
             </small>
+            <small class="text-muted">
+                Forgot your password? <a class="ml-2" href="{% url 'users:password_reset' %}">Reset Password</a>
+            </small>
         </div>
     </div>
 </div>
