[fix] modified attribute on_delete to PROTECT in model Order, [feature] added new view to orders - Sales, [feature] added validation of picture size in ProductCreateView,
added# Please enter the commit message for your changes. Lines starting

--- a/src/shop/templates/shop/base.html
+++ b/src/shop/templates/shop/base.html
@@ -25,7 +25,10 @@
             <a class="nav-link active" aria-current="page" href={% url 'users:profile-update' %}>Update Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url "orders:orders-list" %}">Your Orders</a>
+            <a class="nav-link" href="{% url "orders:orders-list" %}">My Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url "orders:sales-list" %}">My Sales</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url "shop:product-create" %}">Create Product</a>
