--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url "shop:user-product-list" %}">Your Products</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url "dashboards:dashboard-list" %}">Dashboards</a>
+          </li>
         {% endif %}
 
 
